--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Install Dependencies
       run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
     - name: Generate key
-      run: php artisan key:generate
+      run: sed -i 's/^.*APP_KEY.*$/APP_KEY=test-key/' .env
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
     - name: Create Database
