--- a/.github/workflows/lumen.yml
+++ b/.github/workflows/lumen.yml
@@ -1,4 +1,4 @@
-name: Laravel
+name: Lumen
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
     branches: [ master ]
 
 jobs:
-  laravel-tests:
+  lumen-tests:
 
     runs-on: ubuntu-latest
 
